vector(array) of Integer support